emt/templates/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    emt.service: database
  name: database
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    emt.service: database
